# flask-kubernetes-practice

./: .pylintrc  README.md  app.py  dockerfile  flask-app-deployment.yaml  flask-app-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  postgres-storage.yaml  pyproject.toml
templates/: 404.html  index.html
